# igatools

./: .gitignore  About.md  CMakeLists.txt  CodingConventions.md  Compilers.md  Contributing.md  CustomConfigurations.md  Documentation.md  GettingStarted.md  GitRepository.md  History.md  IgatoolsAuthors.md  IgatoolsInExtraProject.md  InputSpecification.md  InputSpecification_2_0.md  InstallingIgatools.md  InstallingTrilinos.md  IteratorDesignDraftProposal.md  License.md  LinearAlgebraDesignDraft.md  MacInstallationNotes.md  OutputDesignDraft.md  ProjectHome.md  Publications.md  Tests.md  UsingEclipse.md  WikiStart.md  authors.txt  index.html  license.txt  params.json  readme.txt
tests/: CMakeLists.txt  CTestConfig.cmake  runtest.cmake  tests.h  tests_utils.h
tests/assemble/: local_mass_matrix_01.cpp  local_mass_matrix_02.cpp  local_stiffness_matrix_01.cpp
tests/base/: assert_macro_01.cpp  constant_function_01.cpp  function_01.cpp  function_02.cpp  function_10.cpp  function_11.cpp  function_13.cpp  function_14.cpp  functions_container_01.cpp  objects_container-serialize_01.cpp  objects_container_01.cpp  point_01.cpp  points_01.cpp  print_info_utils_01.cpp  q_gauss_01.cpp  q_gauss_lobatto_01.cpp  q_uniform_01.cpp  quadrature-collapse_01.cpp  quadrature-extension_01.cpp  quadrature-gauss_01.cpp  quadrature-gauss_lobatto_01.cpp  quadrature-restricted_01.cpp  quadrature-uniform_01.cpp  quadrature_uniform_01.cpp  sub_function_01.cpp  sub_function_02.cpp  tensor-action_01.cpp  tensor-action_02.cpp  tensor-arithmetic_01.cpp  tensor-co_action_01.cpp  tensor-contract_1_01.cpp  tensor-cross_product_01.cpp  tensor-det_01.cpp  tensor-det_02.cpp  tensor-index_01.cpp  tensor-inverse_01.cpp  tensor-inverse_02.cpp  tensor-number_entries_01.cpp  tensor-scalar_product_01.cpp  tensor-tensor_product_01.cpp  (+6 more)
tests/basis_functions/: basis_indices_01.cpp  berenstein_extraction_02.cpp  bernstein_01.cpp  bernstein_extraction_01.cpp  bernstein_extraction_03.cpp  bernstein_extraction_04.cpp  bernstein_extraction_tests_common.h  boundary_bug.cpp  boundary_values_01.cpp  boundary_values_02.cpp  boundary_values_03-bug.cpp  boundary_values_03.cpp  bspline-face_basis_01.cpp  bspline-face_basis_02.cpp  bspline-face_space_01.cpp  bspline-face_space_02.cpp  bspline_basis-serialize_01.cpp  bspline_basis_01.cpp  bspline_basis_02.cpp  bspline_basis_03.cpp  bspline_element_iterator-no_cache_01.cpp  bspline_element_iterator-no_cache_02-bug.cpp  bspline_element_iterator-no_cache_02.cpp  bspline_element_iterator_01.cpp  bspline_element_iterator_02.cpp  bspline_element_iterator_03.cpp  bspline_element_iterator_03_no_cache.cpp  bspline_element_iterator_04.cpp  bspline_element_iterator_04_no_cache.cpp  bspline_element_univariate_01.cpp  bspline_element_univariate_at_points_01.cpp  bspline_iterator_01.cpp  bspline_iterator_02.cpp  bspline_iterator_03.cpp  bspline_iterator_04.cpp  bspline_iterator_05.cpp  bspline_iterator_06.cpp  bspline_iterator_07.cpp  bspline_iterator_08.cpp  bspline_iterator_09.cpp  (+114 more)
tests/bug_and_features/: bspline_element_iterator_03_no_cache.cpp  bspline_element_univariate_01.cpp  const_expr_index.cpp  example_sum_factorization.cpp  hierarchiclal_space.cpp  integration_grid_01.cpp  mortar_integration_terms.cpp  mortar_integration_terms_deg11.cpp  mortar_integration_terms_deg20.cpp  mortar_integration_terms_deg22.cpp  mortar_integration_terms_int.cpp  mortar_integration_terms_int2.cpp  mortar_integration_terms_maxfun.cpp  nurbs_uniform_quad_cache_01.cpp  points_02.cpp
tests/functions/: constant_function_01.cpp  custom_formula_function_01.cpp  function_10.cpp  function_13.cpp  function_14.cpp  function_test.h  functions_container_01.cpp  ig_function_01.cpp  ig_grid_function_01.cpp  ig_grid_function_bspline-serialize_01.cpp  ig_grid_function_bspline_01.cpp  ig_grid_function_bspline_02.cpp  ig_grid_function_bspline_03.cpp  linear_function_01.cpp  linear_function_02.cpp  linear_function_03.cpp  sub_domain_01.cpp  sub_domain_02.cpp  sub_domain_03.cpp  sub_function_01.cpp  sub_function_02-bug.cpp  sub_function_02.cpp
tests/geometry/: ball_domain_01.cpp  bspline_mapping-serialize_01.cpp  bspline_mapping_01.cpp  bspline_mapping_01_no_cache.cpp  bspline_mapping_02.cpp  bspline_mapping_02_no_cache.cpp  bspline_mapping_03.cpp  bspline_mapping_03_no_cache.cpp  bspline_mapping_04.cpp  bspline_mapping_04_no_cache.cpp  bspline_mapping_refinement_01.cpp  bspline_uniform_quad_cache_01.cpp  cartesian_grid_01.cpp  cartesian_grid_02.cpp  cartesian_grid_03.cpp  cartesian_grid_04.cpp  cartesian_grid_05.cpp  cartesian_grid_06.cpp  cartesian_grid_face_values_01.cpp  cartesian_grid_iterator_01.cpp  cartesian_grid_iterator_02.cpp  cartesian_grid_refinement_01.cpp  cartesian_grid_union.cpp  curvatures_01.cpp  curvatures_02.cpp  curvatures_03.cpp  cylindrical_annulus_01.cpp  cylindrical_annulus_02.cpp  domain-ball_01.cpp  domain-ball_02.cpp  domain-curvatures_01.cpp  domain-curvatures_02.cpp  domain-cylindrical_annulus_01.cpp  domain-cylindrical_annulus_02.cpp  domain-external_normals_01.cpp  domain-linear_01.cpp  domain-sphere_01.cpp  domain-sphere_02.cpp  domain-triangle_01.cpp  domain_01.cpp  (+71 more)
tests/hierarchical/: grid_active_elements_01.cpp  hierarchical_space.cpp  hierarchiclal_space.cpp
tests/io/: objects_container_parser_01.cpp  objects_container_xml_io_01.cpp  read_mapping_01.cpp  read_mapping_02.cpp  writer_01.cpp  writer_02.cpp  writer_03.cpp  writer_04.cpp  writer_05.cpp  writer_06.cpp  writer_07.cpp
tests/linear_algebra/: dense_matrix-determinant_01.cpp  dense_matrix-eigen_values_01.cpp  dense_matrix-eigen_values_02.cpp  distributed_matrix_01.cpp  distributed_matrix_02.cpp  distributed_vector_01.cpp  distributed_vector_02.cpp  epetra_01.cpp  epetra_02.cpp  matrix_definition01.cpp  matrix_definition02.cpp  matrix_map_01.cpp
tests/mortar/: example_test.cpp  example_testSAVE.cpp  mortar_01.cpp  mortar_igmap_refinement.cpp  mortar_integration_terms.cpp  mortar_integration_terms_deg11.cpp  mortar_integration_terms_deg20.cpp  mortar_map_refinement.cpp  (+6 more)
tutorial/: CMakeLists.txt  cmake_template.txt  tutorial.dox
(+1284 files in other folders)
